--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <div class="content">
           <h4>表单验证</h4>
           <p>介绍DOM&事件</p>
-          <a href="/form-validator" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/form-validator"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -54,7 +57,10 @@
         <div class="content">
           <h4>电影座位预定</h4>
           <p>DOM & CSS, 本地存储</p>
-          <a href="/movie-seat-booking" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/movie-seat-booking"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -65,7 +71,7 @@
           <h4>自定义视频播放器</h4>
           <p>HTML5 Video API</p>
           <a
-            href="/custom-video-player/"
+            href="/projects/custom-video-player/"
             target="_blank"
             class="btn btn-primary"
             >查看效果</a
@@ -77,7 +83,10 @@
         <div class="content">
           <h4>汇率计算器</h4>
           <p>Fetch API, JSON</p>
-          <a href="exchange-rate/" target="_blank" class="btn btn-primary"
+          <a
+            href="projects/exchange-rate/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -87,7 +96,10 @@
         <div class="content">
           <h4>DOM数组高阶方法</h4>
           <p>DOM & forEach(), map(), filter()等</p>
-          <a href="/dom-array-methods/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/dom-array-methods/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -97,7 +109,10 @@
         <div class="content">
           <h4>折叠侧边栏</h4>
           <p>UI/CSS/JS 动画</p>
-          <a href="/modal-menu-slider/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/modal-menu-slider/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -107,7 +122,7 @@
         <div class="content">
           <h4>自挂东南枝游戏</h4>
           <p>DOM, 事件, SVG</p>
-          <a href="/hangman/" target="_blank" class="btn btn-primary"
+          <a href="/projects/hangman/" target="_blank" class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -117,7 +132,10 @@
         <div class="content">
           <h4>食谱查询器</h4>
           <p>Fetch API, CSS网格布局</p>
-          <a href="/meal-finder/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/meal-finder/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -127,7 +145,10 @@
         <div class="content">
           <h4>记账本</h4>
           <p>DOM, Array方法,本地存储</p>
-          <a href="/expense-tracker/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/expense-tracker/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -137,7 +158,10 @@
         <div class="content">
           <h4>音乐播放器</h4>
           <p>UI/动画, Audio API</p>
-          <a href="/music-player/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/music-player/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -148,7 +172,7 @@
           <h4>懒加载</h4>
           <p>CSS加载动画, 定时器, Async/Await</p>
           <a
-            href="/infinite-scroll-blog/"
+            href="/projects/infinite-scroll-blog/"
             target="_blank"
             class="btn btn-primary"
             >查看效果</a
@@ -160,7 +184,10 @@
         <div class="content">
           <h4>打字游戏</h4>
           <p>DOM, 定时器, 本地存储</p>
-          <a href="/typing-game/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/typing-game/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -170,7 +197,10 @@
         <div class="content">
           <h4>文字转语音阅读器</h4>
           <p>HTML5 Speech API</p>
-          <a href="/speech-text-reader/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/speech-text-reader/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -180,7 +210,10 @@
         <div class="content">
           <h4>记忆卡片</h4>
           <p>CSS动画, 本地存储</p>
-          <a href="/memory-cards/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/memory-cards/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -190,7 +223,10 @@
         <div class="content">
           <h4>歌词搜索App</h4>
           <p>Fetch, Async/Await</p>
-          <a href="/lyrics-search/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/lyrics-search/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -200,7 +236,10 @@
         <div class="content">
           <h4>呼吸放松App</h4>
           <p>CSS动画/Keyframes</p>
-          <a href="/relaxer-app/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects//relaxer-app/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -210,7 +249,10 @@
         <div class="content">
           <h4>2D打砖块游戏</h4>
           <p>HTML5 Canvas API</p>
-          <a href="/breakout-game/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/breakout-game/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -220,7 +262,10 @@
         <div class="content">
           <h4>新年倒计时</h4>
           <p>DOM, 事件, CSS, 时间</p>
-          <a href="/new-year-countdown/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/new-year-countdown/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -230,7 +275,10 @@
         <div class="content">
           <h4>福布斯富豪榜</h4>
           <p>Drag & Drop API</p>
-          <a href="/sortable-list/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/sortable-list/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
@@ -240,7 +288,10 @@
         <div class="content">
           <h4>语音猜数字</h4>
           <p>Speech Recognition API</p>
-          <a href="/speak-number-guess/" target="_blank" class="btn btn-primary"
+          <a
+            href="/projects/speak-number-guess/"
+            target="_blank"
+            class="btn btn-primary"
             >查看效果</a
           >
         </div>
