--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
           <li><a href="/">首页</a></li>
           <li><a href="#projects">JS实战项目展示</a></li>
+          <li><a href="/homework.html">作业</a></li>
           <li><a href="/route" target="_blank">学习路线</a></li>
         </ul>
       </div>
@@ -26,7 +27,6 @@
 
     <header class="showcase bg-primary">
       <div class="container">
-        <!-- <h2>20 + 原生Javascript实战项目</h2> -->
         <h1>HTML5、CSS和JavaScript构建20+实战项目</h1>
         <h1>纯原生，不涉及JS或CSS框架、库等</h1>
         <a
