--- a/route/index.html
+++ b/route/index.html
@@ -167,13 +167,13 @@ HTML5全栈开发培训,Web开发,前端开发"
             <div class="soller1 wow animated fadeIn" data-wow-delay=".2s"></div>
             <div class="island1 wow animated fadeIn" data-wow-delay=".4s">
               <h2>HTML5+CSS3零基础入门</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/384139?taid=3907711570140299&tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="island2 wow animated fadeIn" data-wow-delay=".4s">
               <h2>20个实战</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/1968055?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
@@ -192,49 +192,49 @@ HTML5全栈开发培训,Web开发,前端开发"
             <div class="soller3 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island3 wow animated fadeIn" data-wow-delay=".4s">
               <h2>JS基础+ES6</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/464526?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir1 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island4 wow animated fadeIn" data-wow-delay=".4s">
               <h2>30个JS实战项目</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/1740943?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir2 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island5 wow animated fadeIn" data-wow-delay=".4s">
               <h2>TypeScript</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/464466?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir3 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island6 wow animated fadeIn" data-wow-delay=".4s">
               <h2>Git起死回生之术</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/579440?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir4 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island7 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>JS葵花宝典-算法</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <h2>JS算法</h2>
+              <a href="https://ke.qq.com/course/2962159?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir5 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island8 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>Node.js</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <h2>前端零基础</h2>
+              <a href="https://ke.qq.com/course/1968055?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir6 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island9 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>接口文档</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <h2>前端综合课程</h2>
+              <a href="https://ke.qq.com/course/2994447?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
@@ -251,22 +251,22 @@ HTML5全栈开发培训,Web开发,前端开发"
               <p>纵使路上有万千荆棘，你也要不负众望！</p>
             </div>
             <div class="island10 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>Redux</h2>
+              <h2>React</h2>
               <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="soller5 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island11 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>React Hooks</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <h2>Umi3</h2>
+              <a href="https://ke.qq.com/course/2555454?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="soller6 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island12 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>Umi.js</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <h2>React课程包</h2>
+              <a href="https://ke.qq.com/course/package/27286?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
@@ -282,7 +282,7 @@ HTML5全栈开发培训,Web开发,前端开发"
               <p>大招已备好，终极BOSS在等你！</p>
             </div>
             <div class="island13 wow animated fadeIn" data-wow-delay=".4s">
-              <h2>Vue.js 2</h2>
+              <h2>Vue.js实战美团</h2>
               <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
@@ -290,35 +290,35 @@ HTML5全栈开发培训,Web开发,前端开发"
             <div class="dir7 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island14 wow animated fadeIn" data-wow-delay=".4s">
               <h2>微信小程序</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/391953?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir8 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island15 wow animated fadeIn" data-wow-delay=".4s">
               <h2>mpvue</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/369750?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir9 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island16 wow animated fadeIn" data-wow-delay=".4s">
               <h2>uni-app</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/457370?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir10 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island17 wow animated fadeIn" data-wow-delay=".4s">
               <h2>Vue & TypeScript</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/429006?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="dir11 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island18 wow animated fadeIn" data-wow-delay=".4s">
               <h2>Vue.js 3</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/2959355?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
@@ -336,14 +336,14 @@ HTML5全栈开发培训,Web开发,前端开发"
             <div class="maptitlesmall5"><p>有我们在，你必须躺赢！</p></div>
             <div class="island19 wow animated fadeIn" data-wow-delay=".4s">
               <h2>Node Vue全栈</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/391846?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
             <div class="soller9 wow animated fadeIn" data-wow-delay=".4s"></div>
             <div class="island20 wow animated fadeIn" data-wow-delay=".4s">
               <h2>结业实战</h2>
-              <a href="https://ke.qq.com/course/464861?tuin=c9304a42" target="_blank" class="Mapanimate"
+              <a href="https://ke.qq.com/course/package/22777?tuin=c9304a42" target="_blank" class="Mapanimate"
                 >进入学习</a
               >
             </div>
@@ -355,7 +355,7 @@ HTML5全栈开发培训,Web开发,前端开发"
             <div class="cloud4"></div>
             <a
               class="ou5btn"
-              href="https://ke.qq.com/course/464861?tuin=c9304a42"
+              href="https://ke.qq.com/course/package/27862?tuin=c9304a42"
               target="_blank"
               >获取学习路径</a
             >
